--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "homepage": "https://github.com/reuben-john/eloquent-javascript#readme",
   "dependencies": {
+    "date-names": "^0.1.12",
     "eslint": "^5.11.1",
     "eslint-config-prettier": "^3.3.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "ordinal": "^1.0.2",
     "prettier": "^1.15.3"
   }
 }
