--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-names": "^0.1.12",
     "eslint": "^5.11.1",
     "eslint-config-prettier": "^3.3.0",
+    "eslint-plugin-html": "^5.0.0",
     "eslint-plugin-prettier": "^3.0.1",
     "ordinal": "^1.0.2",
     "prettier": "^1.15.3"
