--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-prettier": "^3.0.1",
     "ordinal": "^1.0.2",
     "prettier": "^1.15.3"
+  },
+  "devDependencies": {
+    "prettier-eslint": "^8.8.2"
   }
 }
